Fixing cropped thubmnails on blog, closes #437

--- a/web/wp-content/themes/lf-theme/source/scss/components/_archive.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_archive.scss
@@ -98,7 +98,6 @@
 
 	@media (max-width: 767px) {
 		margin-bottom: 1rem;
-		height: 200px;
 	}
 
 	@media (min-width: 768px) {
